# Assistant

./: Dockerfile  README.md  build_index.py  docker-compose.yml  main.py  pyproject.toml  test.py
RAG/: RAG.py  __init__.py  encode.py  generation.py  index.py
RAG/index_files/: documents.pkl
